# datafusion-federation

./: .gitignore  Cargo.toml  README.md
.github/workflows/: docs.yml  integration-test.yml  release_plz.yml  test.yml
datafusion-federation/: Cargo.toml
datafusion-federation/examples/: df-csv-advanced.rs
datafusion-federation/src/: analyzer.rs  lib.rs  optimize.rs  optimizer.rs  plan_node.rs  schema_cast.rs  table_provider.rs  table_reference.rs
datafusion-federation/src/analyzer/: mod.rs  scan_result.rs
datafusion-federation/src/optimize/optimize_projections/: mod.rs  required_indices.rs
datafusion-federation/src/optimizer/: mod.rs
datafusion-federation/src/schema_cast/: lists_cast.rs  mod.rs  record_convert.rs  struct_cast.rs
datafusion-federation/src/sql/: analyzer.rs  ast_analyzer.rs  executor.rs  mod.rs  schema.rs  table.rs  table_reference.rs
datafusion-federation/src/sql/analyzer/: collect_known_rewrites.rs  mod.rs  rewrite_table_scan.rs
datafusion-federation/src/sql/ast_analyzer/: mod.rs  rewrite_multi_part.rs  table_arg.rs
datafusion-federation/src/sql/optimizer/: mod.rs
datafusion-federation/src/sql/optimizer/optimize_projections/: mod.rs
datafusion-federation/src/sql/optimizer/push_down_filter/: mod.rs
datafusion-federation/src/sql/rewrite/: ast.rs  plan.rs
examples/examples/: flight-sql.rs
integration-test/: Cargo.toml
integration-test/queries/tpch/: q3.sql
integration-test/snapshots/explain/: federation_integration_tests__tpch_tpch_q10_explain.snap  federation_integration_tests__tpch_tpch_q11_explain.snap  federation_integration_tests__tpch_tpch_q12_explain.snap  federation_integration_tests__tpch_tpch_q13_explain.snap  federation_integration_tests__tpch_tpch_q14_explain.snap  federation_integration_tests__tpch_tpch_q16_explain.snap  federation_integration_tests__tpch_tpch_q17_explain.snap  federation_integration_tests__tpch_tpch_q18_explain.snap  federation_integration_tests__tpch_tpch_q19_explain.snap  federation_integration_tests__tpch_tpch_q1_explain.snap  federation_integration_tests__tpch_tpch_q20_explain.snap  federation_integration_tests__tpch_tpch_q21_explain.snap  federation_integration_tests__tpch_tpch_q22_explain.snap  federation_integration_tests__tpch_tpch_q2_explain.snap  federation_integration_tests__tpch_tpch_q3_explain.snap  federation_integration_tests__tpch_tpch_q4_explain.snap  federation_integration_tests__tpch_tpch_q5_explain.snap  federation_integration_tests__tpch_tpch_q6_explain.snap  federation_integration_tests__tpch_tpch_q7_explain.snap  federation_integration_tests__tpch_tpch_q8_explain.snap  federation_integration_tests__tpch_tpch_q9_explain.snap
integration-test/src/: main.rs
integration-test/src/bench/: mod.rs
integration-test/src/optimize/: mod.rs
integration-test/src/optimize/optimize_projections/: mod.rs
integration-test/src/validation/: mod.rs
integration-test/src/validation/tpch/: q18.csv
sources/sql/: Cargo.toml
sources/sql/src/: lib.rs  schema.rs
sources/sql/src/rewrite/: ast.rs  mod.rs  plan.rs
test/: Cargo.toml
test/snapshots/: federation_integration_tests__tpch_tpch_q10_explain.snap  federation_integration_tests__tpch_tpch_q11_explain.snap  federation_integration_tests__tpch_tpch_q12_explain.snap  federation_integration_tests__tpch_tpch_q13_explain.snap  federation_integration_tests__tpch_tpch_q14_explain.snap  federation_integration_tests__tpch_tpch_q16_explain.snap  federation_integration_tests__tpch_tpch_q17_explain.snap  federation_integration_tests__tpch_tpch_q18_explain.snap  federation_integration_tests__tpch_tpch_q19_explain.snap  federation_integration_tests__tpch_tpch_q1_explain.snap  federation_integration_tests__tpch_tpch_q20_explain.snap  federation_integration_tests__tpch_tpch_q21_explain.snap  federation_integration_tests__tpch_tpch_q22_explain.snap  federation_integration_tests__tpch_tpch_q2_explain.snap  federation_integration_tests__tpch_tpch_q3_explain.snap  federation_integration_tests__tpch_tpch_q4_explain.snap  federation_integration_tests__tpch_tpch_q5_explain.snap  federation_integration_tests__tpch_tpch_q6_explain.snap  federation_integration_tests__tpch_tpch_q7_explain.snap  federation_integration_tests__tpch_tpch_q8_explain.snap  federation_integration_tests__tpch_tpch_q9_explain.snap
test/snapshots/explain/: federation_integration_tests__tpch_tpch_q20_explain.snap  federation_integration_tests__tpch_tpch_q2_explain.snap  federation_integration_tests__tpch_tpch_q3_explain.snap  federation_integration_tests__tpch_tpch_q4_explain.snap  federation_integration_tests__tpch_tpch_q5_explain.snap  federation_integration_tests__tpch_tpch_q6_explain.snap  federation_integration_tests__tpch_tpch_q8_explain.snap  federation_integration_tests__tpch_tpch_q9_explain.snap
test/src/: main.rs
test/src/bench/: mod.rs
test/src/component/: mod.rs
