[package]
name = "datafusion-federation"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Datafusion federation."

[lib]
name = "datafusion_federation"
path = "src/lib.rs"

[package.metadata.docs.rs]
# Whether to pass `--all-features` to Cargo (default: false)
all-features = true
# Whether to pass `--no-default-features` to Cargo (default: false)
no-default-features = true

[features]
sql = []

[dependencies]
futures.workspace = true
async-trait.workspace = true
datafusion.workspace = true
async-stream.workspace = true
arrow-json.workspace = true
tracing = "0.1"

[dev-dependencies]
tokio.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
insta = { version = "1.42.0", features = ["filters"] }

[[example]]
name = "df-csv"
path = "examples/df-csv.rs"
required-features = ["sql"]

[[example]]
name = "df-csv-advanced"
path = "examples/df-csv-advanced.rs"
required-features = ["sql"]
