[package]
name = "federation-integration-tests"
description = "Integration tests for datafusion-federation"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
publish = false

[dependencies]
anyhow = "1.0.98"
duckdb = "1.1.3"

# "https://github.com/datafusion-contrib/datafusion-table-providers.git", rev = "7d4fa6d36b464a72afea88e7d3644e143c2535ad",
datafusion-table-providers = { path = "../../datafusion-table-providers/core", features = [
    "duckdb",
    "duckdb-federation",
] } # spiceai-50

datafusion = { workspace = true }
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros"] }
async-trait.workspace = true
tonic = "0.13"
futures.workspace = true
insta = { version = "1.42.0", features = ["filters"] }
chrono = "0.4.31"
datafusion-federation = { workspace = true, features = ["sql"] }
