[package]
name = "federation-integration-tests"
description = "Integration tests for datafusion-federation"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
publish = false

[dependencies]
anyhow = "1.0.98"
duckdb = "1.1.3"
datafusion-table-providers = { git = "https://github.com/datafusion-contrib/datafusion-table-providers.git", rev = "374083cdccbb3f4e6ab7fa3ee6d1b6a87393f563", features = [
    "duckdb",
    "duckdb-federation",
] } # spiceai-50

datafusion = { workspace = true }
tokio = { version = "1.35", features = ["rt", "rt-multi-thread", "macros"] }
async-trait.workspace = true
tonic = "0.13"
futures.workspace = true
insta = { version = "1.42.0", features = ["filters"] }
chrono = "0.4.31"
datafusion-federation = { workspace = true, features = ["sql"] }
